--- a/package.json
+++ b/package.json
@@ -6,20 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lalan992/project-internshipGroup11.git"
-  },
   "author": "rupali,pradeep,farine,lalan",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lalan992/project-internshipGroup11/issues"
-  },
-  "homepage": "https://github.com/lalan992/project-internshipGroup11#readme",
   "dependencies": {
-    "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
